do not push Rproject

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 
 A_CRDs/.DS_Store
 debug/
+A_CRDs/trans/trans.Rproj
+A_CRDs/trans/.Rproj.user/shared/notebooks/patch-chunk-names
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-88614DC/lock_file
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-88614DC/55918952-contents
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-88614DC/55918952
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/INDEX
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/EF30656C
