--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-88614DC/55918952-contents
 A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-88614DC/55918952
 A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/INDEX
 A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/EF30656C
+A_CRDs/R_plots/.DS_Store
+A_CRDs/trans/.DS_Store
