ignore R project files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/INDEX
 A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/EF30656C
 A_CRDs/R_plots/.DS_Store
 A_CRDs/trans/.DS_Store
+*.Rproj
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/prop/3632AE9C
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/prop/INDEX
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-EA059EA9/4033D6C8
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-EA059EA9/4033D6C8-contents
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-EA059EA9/lock_file
+A_CRDs/R_plots/transCRDs/.Rproj.user/shared/notebooks/patch-chunk-names
