--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,53 @@ A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-EA059EA9/4033D6C8
 A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-EA059EA9/4033D6C8-contents
 A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-EA059EA9/lock_file
 A_CRDs/R_plots/transCRDs/.Rproj.user/shared/notebooks/patch-chunk-names
+A_CRDs/CRD-QTLs/.DS_Store
+*.pper
+A_CRDs/R_plots/transCRDs/.Rhistory
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/rmd-outputs
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/saved_source_markers
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/prop/4B51D556
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-8692D457/3E605DCC
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-8692D457/3E605DCC-contents
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-8692D457/4033D6C8
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-8692D457/4033D6C8-contents
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-8692D457/559A1E03
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-8692D457/559A1E03-contents
+A_CRDs/R_plots/transCRDs/.Rproj.user/5B68AD9B/sources/s-8692D457/lock_file
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/6F5C266B
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-82C34C48/3868C44C
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-82C34C48/3868C44C-contents
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-82C34C48/55918952-contents
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/s-82C34C48/lock_file
+A_CRDs/trans/.Rproj.user/shared/notebooks/paths
+A_CRDs/R_plots/.Rproj.user/shared/notebooks/patch-chunk-names
+A_CRDs/R_plots/.Rproj.user/5B68AD9B/sources/s-6682BA2/lock_file
+A_CRDs/R_plots/.Rproj.user/5B68AD9B/sources/s-6682BA2/C42DCC1B-contents
+A_CRDs/R_plots/.Rproj.user/5B68AD9B/sources/s-6682BA2/C42DCC1B
+A_CRDs/R_plots/.Rproj.user/5B68AD9B/sources/prop/INDEX
+A_CRDs/R_plots/.Rproj.user/5B68AD9B/sources/prop/CDB74A77
+A_CRDs/CRD-QTLs/.Rproj.user/shared/notebooks/paths
+A_CRDs/CRD-QTLs/.Rproj.user/shared/notebooks/patch-chunk-names
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/s-E8AC8686/lock_file
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/s-E8AC8686/FBA24D18-contents
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/s-E8AC8686/FBA24D18
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/s-E8AC8686/F6AD706F-contents
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/s-E8AC8686/F6AD706F
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/s-E8AC8686/C787F4D8-contents
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/s-E8AC8686/C787F4D8
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/prop/INDEX
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/prop/9889E6BA
+A_CRDs/CRD-QTLs/.Rproj.user/5B68AD9B/sources/prop/79268E4B
+A_CRDs/trans/.Rproj.user/5B68AD9B/rmd-outputs
+A_CRDs/trans/.Rproj.user/5B68AD9B/saved_source_markers
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/3868C44C
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/3868C44C-contents
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/57106BA6
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/57106BA6-contents
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/75F05CE5
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/75F05CE5-contents
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/7677F48F
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/per/t/7677F48F-contents
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/20CA4D28
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/39025F6B
+A_CRDs/trans/.Rproj.user/5B68AD9B/sources/prop/F4D020B1
